// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`t-ref can get a ref on a node 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { createRef } = helpers;
  
  let block1 = createBlock(\`<div><span block-ref="0"/></div>\`);
  
  return function template(ctx, node, key = "") {
    let ref1 = createRef(ctx['myspan']);
    return block1([ref1]);
  }
}"
`;

exports[`t-ref ref in a t-call 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const callTemplate_1 = app.getTemplate(\`sub\`);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callTemplate_1.call(this, ctx, node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-ref ref in a t-call 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { createRef } = helpers;
  
  let block1 = createBlock(\`<div>1<span block-ref="0"/>2</div>\`);
  
  return function template(ctx, node, key = "") {
    let ref1 = createRef(ctx['name']);
    return block1([ref1]);
  }
}"
`;

exports[`t-ref ref in a t-if 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { createRef } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block2 = createBlock(\`<span block-ref="0"/>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (ctx['condition']) {
      let ref1 = createRef(ctx['name']);
      b2 = block2([ref1]);
    }
    return block1([], [b2]);
  }
}"
`;

exports[`t-ref refs in a loop 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, createRef, safeOutput, withKey } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block3 = createBlock(\`<div block-ref="0"><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['items']);;
    for (let i1 = 0; i1 < l_block2; i1++) {
      ctx[\`item\`] = k_block2[i1];
      const key1 = ctx['item'].id;
      const tKey_1 = ctx['item'].id;
      let ref1 = createRef(ctx['item'].ref);
      const b4 = toggler(tKey_1, safeOutput(ctx['item'].id));
      c_block2[i1] = withKey(block3([ref1], [b4]), tKey_1 + key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-ref two refs, one in a t-if 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { createRef } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><p block-ref="0"/></div>\`);
  let block2 = createBlock(\`<span block-ref="0"/>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (ctx['condition']) {
      let ref1 = createRef(ctx['refs'].name);
      b2 = block2([ref1]);
    }
    let ref2 = createRef(ctx['refs'].p);
    return block1([ref2], [b2]);
  }
}"
`;
